--- a/templates/view.html
+++ b/templates/view.html
@@ -10,41 +10,166 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
 
-<body class="bg-white text-black dark:bg-gray-800 dark:text-white transition duration-300"></body>
-<section id="sidebar"
-    class="flex flex-col fixed top-0 left-0 w-72 h-full bg-gray-200 dark:bg-gray-800 z-50 transition-all duration-300">
-    <ul class="space-y-2 mt-6">
-        <li>
-            <div class="mb-auto -mt-2 flex justify-center">
-                <img src="/static/img/logobar.png" alt="logo reclea" class="w-24 h-auto">
-            </div>
-        </li>
-        <li class="px-4 py-2 bg-gray-200 dark:bg-white shadow-md rounded-r-full">
-            <a href="#" class="flex items-center space-x-2">
-                <i class='bx bxs-dashboard dark:text-black'></i>
-                <span class="dark:text-black">Dashboard</span>
-            </a>
-        </li>
-        <li class="px-4 py-2 hover:bg-gray-200  shadow-md rounded-r-full dark:bg-gray-600">
-            <a href="#" class="flex items-center space-x-2 ">
-                <i class='bx bxs-doughnut-chart'></i>
-                <span>Analytics</span>
-            </a>
-        </li>
-    </ul>
-    <div class="mt-auto -mb-6 flex justify-center">
-        <img src="/static/img/NinjaFlylogo.png"
-            alt="logo ninja" class="w-28 h-28">
-    </div>
-    <a href="#" class=" flex justify-center items-center space-x-2">
-        <span class="font-bold hover:border hover:border-red-500">Ninjafly</span>
-    </a>
+<body class="bg-white text-black dark:bg-gray-800 dark:text-white transition duration-300 overflow-y-hidden">
+    <section>
+        <div class="absolute top-0 left-0 w-full h-full bg-gradient-to-t from-gray-800 via-gray-800/60 to-transparent">
+            <nav class="fixed z-50 md:z-auto bg-gradient-to-b from-black via-gray-800/60 to-transparent md:static flex p-5 md:p-20 justify-between items-center w-full gap-5 "
+                data-aos="zoom-y-out">
+                <!-- // backdrop-blur-md md:backdrop-blur-none // -->
+                <label for="check-mobilenav" class="flex flex-col min-w-10 max-w-20 cursor-pointer md:hidden">
+                    <input type="checkbox" id="check-mobilenav" class="peer hidden" />
+                    <span
+                        class="bg-stone-100 rounded-[10px] h-[3.5px] sm:h-[5px] my-[3px] sm:my-[5px] transition-transform duration-[0.4s] ease-custom w-1/2 peer-checked:origin-bottom peer-checked:rotate-45 peer-checked:translate-x-[8px]"></span>
+                    <span
+                        class="bg-stone-100 rounded-[10px] h-[3.5px] sm:h-[5px] my-[3px] sm:my-[5px] transition-transform duration-[0.4s] ease-custom w-full peer-checked:origin-top peer-checked:-rotate-45"></span>
+                    <span
+                        class="bg-stone-100 rounded-[10px] h-[3.5px] sm:h-[5px] my-[3px] sm:my-[5px] transition-transform duration-[0.4s] ease-custom w-3/4 peer-checked:origin-bottom peer-checked:w-1/2 peer-checked:translate-x-[30px] peer-checked:-translate-y-[11px] peer-checked:rotate-45"></span>
+                </label>
 
-</section>
+                <ul class="hidden md:flex justify-start md:gap-5 lg:gap-10 size-50">
+                    <li href="javascript:void(0)" class="relative group">
+                        <a href="" class="font-semibold text-stone-100 text-lg duration-500">
+                            HOME
+                        </a>
+                        <div class="absolute -bottom-2 left-0 w-0 duration-500 group-hover:w-full h-1 bg-stone-100">
+                        </div>
+                    </li>
+                    <li href="javascript:void(0)" class="relative group">
+                        <a href="/about.html" class="font-semibold text-stone-100 text-lg duration-500">
+                            ABOUT
+                        </a>
+                        <div class="absolute -bottom-2 left-0 w-0 duration-500 group-hover:w-full h-1 bg-stone-100">
+                        </div>
+                    </li>
+
+                </ul>
+                <div id="brand"
+                    class="text-3xl font-bold font-montserrat text-stone-900 flex items-center transform transition duration-300 ease-in-out hover:scale-110">
+                    <a href="index.html" class="flex items-center">
+                        <img src="./src/images/logo/logobar.png" alt="Reclea Brick Logo"
+                            class="max-w-24 sm:max-w-32 shadow-lg" />
+                        <span class="sr-only">Reclea Brick</span>
+                    </a>
+                </div>
+
+            </nav>
+        </div>
+
+    </section>
+
+
+    <section id="sidebar"
+        class="flex flex-col fixed top-0 pt-8 left-0 w-72 h-full bg-gradient-to-tl from-black via-gray-900 to-black z-50 transition-all duration-300 hidden md:flex">
+        <ul class="space-y-4">
+            <li>
+                <div class="mb-auto flex justify-center">
+                    <img src="/static/img/logobar.png" alt="logo reclea" class="w-28 h-auto mb-4">
+                </div>
+            </li>
+            <li class="px-4 py-2  hover:bg-gray-200 shadow-md bg-gray-600 group ">
+                <a href="/" class="flex items-center text-white space-x-2 group-hover:text-black">
+                    <i class='bx bxs-dashboard group-hover:text-black'></i>
+                    <span class="group-hover:text-black">Dashboard</span>
+                </a>
+            </li>
+            <li class="px-4 py-2 bg-zinc-100  shadow-md  ">
+                <a href="/view" class="flex items-center  space-x-2 ">
+                    <i class='bx bxs-doughnut-chart '></i>
+                    <span class="">Web Saya</span>
+                </a>
+            </li>
+        </ul>
+        <div class="mt-auto -mb-6 flex justify-center">
+            <img src="/static/img/NinjaFlylogo.png" alt="logo ninja" class="w-28 h-28">
+        </div>
+        <a href="https://www.instagram.com/ninjafly.id/" class="flex justify-center items-center space-x-2">
+            <span class="font-bold hover:border hover:border-red-500 text-white">Ninjafly</span>
+        </a>
+    </section>
+
+    <section id="content"
+        class="relative ml-0 md:ml-72 p-6 h-screen bg-gradient-to-tr from-black via-gray-900 to-black">
+        <div id="particles" class="w-full h-full absolute inset-0"></div>
+        <div class="h-screen flex flex-col justify-center items-center gap-12">
+            <div class="relative border border-white rounded-lg p-8 px-10 hover:bg-gray-100 group cursor-pointer"
+                onclick="window.open('https://recleabrick.netlify.app/', '_blank')">
+                <a href="https://recleabrick.netlify.app/" target="_blank" id="artikelLink"
+                    class="flex items-center space-x-2 text-white group-hover:text-black">
+                    <i class="fab fa-chrome"></i>
+                    <span>WEBSITE RECLEA BRICK</span>
+                </a>
+            </div>
+            <div class="relative border border-white rounded-lg p-8 px-12 hover:bg-gray-100 group cursor-pointer"
+                onclick="window.open('https://visit-linkreclea.glitch.me/', '_blank')">
+                <a href="https://visit-linkreclea.glitch.me/" target="_blank" id="beritaLink"
+                    class="flex items-center space-x-2 text-white group-hover:text-black">
+                    <i class="fa fa-sign-in"></i>
+                    <span>VISITOR LINK RECLEA</span>
+                </a>
+            </div>
+        </div>
+
+        <div id="offscreen-nav-container"
+            class="fixed top-0 left-0 w-screen h-svh bg-stone-900 z-10 flex flex-col justify-between -translate-x-full md:hidden duration-300">
+            <div class="flex flex-col gap-10 p-5">
+                <div class="flex justify-between text-white">
+                    <div class=""></div>
+                    <div class=""></div>
+                </div>
+                <ul class="flex flex-col gap-5 p-5">
+                    <li href="javascript:void(0)" class="relative group">
+                        <a href="index.html"
+                            class="font-semibold text-stone-300 group-hover:text-stone-200 text-xl duration-300">Home</a>
+                        <div
+                            class="absolute -bottom-2 left-0 w-0 duration-500 group-hover:w-full h-1 group-hover:bg-stone-200 bg-stone-100">
+                        </div>
+                    </li>
+                    <li href="javascript:void(0)" class="relative group">
+                        <a href="about.html"
+                            class="font-semibold text-stone-300 group-hover:text-stone-200 text-xl duration-300">About</a>
+                        <div
+                            class="absolute -bottom-2 left-0 w-0 duration-500 group-hover:w-full h-1 group-hover:bg-stone-200 bg-stone-100">
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            <div
+                class="text-white text-xs font-light md:font-normal md:text-base text-center p-5 border-t border-stone-600">
+                CopyRight &copy; 2024 Recleabrick. All Rights Reserved designed by
+                <a href="https://www.instagram.com/ninjafly.id/"
+                    class="underline italic transition-transform duration-300 hover:scale-110 hover:text-red-700">Ninjafly.id</a>
+            </div>
+        </div>
+
+        <script>
+            const toggleSideNav = (isOpen) => {
+                const checkbox = document.getElementById('check-mobilenav');
+                checkbox.checked = isOpen;
+                const navContainer = document.getElementById('offscreen-nav-container');
+
+                navContainer.classList.toggle('-translate-x-full', !isOpen);
+                navContainer.classList.toggle('translate-x-0', isOpen);
+            };
+
+            document.addEventListener('DOMContentLoaded', () => {
+                AOS.init();
+
+                const checkbox = document.getElementById('check-mobilenav');
+
+                checkbox.addEventListener('change', () => {
+                    toggleSideNav(checkbox.checked);
+                });
+            });
+        </script>
+
+        <script src="/static/particles1.js"></script>
 </body>
 
 </html>
